--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Mostrar Information</span>
+          <span>Mostrar Información</span>
 
           <ion-icon name="chevron-down"></ion-icon>
         </button>
@@ -128,13 +128,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://co.linkedin.com/in/ifram333/en" class="social-link">
+            <a href="https://co.linkedin.com/in/ifram333/en" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/ifram333/" class="social-link">
+            <a href="https://github.com/ifram333/" target="_blank" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://www.instagram.com/ifram333/" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -291,7 +297,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -387,7 +393,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
@@ -439,7 +445,7 @@
           - clients
         -->
 
-        <section class="clients">
+        <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -483,7 +489,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
@@ -815,7 +821,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="java">
-              <a href="https://github.com/ifram333/testing-mobile-template">
+              <a href="https://github.com/ifram333/testing-mobile-template" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -833,7 +839,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="python">
-              <a href="https://github.com/ifram333/testing-mobile-template-py">
+              <a href="https://github.com/ifram333/testing-mobile-template-py" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
