--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
       <article class="about  active" data-page="acerca de">
 
         <header>
-          <h2 class="h2 article-title">Acerca de mi</h2>
+          <h2 class="h2 article-title">Acerca de mí</h2>
         </header>
 
         <section class="about-text">
           <p>
             Yo soy ingeniero de sistemas y ciencias de la computación de Cali, Colombia, trabajando en automatización de pruebas.
             Disfruto de ver como los casos de pruebas que he diseñado, cobran vida y son ejecutados automáticamente en dispositivos
-            móbiles y navegadores web.
+            móviles y navegadores web.
           </p>
 
           <p>
@@ -282,7 +282,7 @@
                 <h4 class="h4 service-item-title">Automatización de pruebas</h4>
 
                 <p class="service-item-text">
-                  Automatizar los casos de pruebas en dispositivos móbiles o navegadores.
+                  Automatizar los casos de pruebas en dispositivos móviles o navegadores.
                 </p>
               </div>
 
