--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
 
             <textarea name="message" class="form-input" placeholder data-i18n="contact.message" required data-form-input></textarea>
 
-            <div class="g-recaptcha" data-sitekey="6LfugtMpAAAAAL6e8po2sSJ7tQ1ffmYW9Fe_HIXT"></div> <!-- replace with your recaptcha SITE key not secret key -->
+            <div class="g-recaptcha" data-sitekey="6LfugtMpAAAAAL6e8po2sSJ7tQ1ffmYW9Fe_HIXT" required></div> <!-- replace with your recaptcha SITE key not secret key -->
 
             <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
